# DeepFilterNet-VST

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
DeepFilterNetVst/: CMakeLists.txt  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
DeepFilterNetVst2/: CMakeLists.txt  DenoiseEngine.cpp  DenoiseEngine.h  EmbeddedResources.rc.in  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ResourceIds.h  RuntimeAssets.cpp  RuntimeAssets.h
rust/deepfilter_runtime_bridge/src/: lib.rs
